examples/errors/undeclared_class.olang
Program: Main

class Main is
    this() is
        var a : Error(5)
    end
end